Formatting changes - colour schemes / buttons / labels / page names - part1

--- a/src/main/res/layout/light_adjustments.xml
+++ b/src/main/res/layout/light_adjustments.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/app_background">
 
    <!-- <TextView
         android:id="@+id/textViewHeaderVersion"
@@ -177,7 +177,7 @@
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="@dimen/color_slider_height"
-                android:background="@android:color/holo_red_light"
+                android:background="@color/white"
                 android:gravity="center"
                 android:text="Red"
                 android:textColor="@android:color/black"
@@ -187,7 +187,7 @@
                 android:id="@+id/edRed"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/color_slider_height"
-                android:background="@android:color/holo_red_light"
+                android:background="@color/white"
                 android:ems="3"
                 android:gravity="center"
                 android:inputType="number"
@@ -207,7 +207,7 @@
                 android:thumbTint="@color/red_slider"
                 android:progressTint="@color/red_slider"
                 android:progressTintMode="src_in"
-                android:background="@android:color/holo_red_light"
+                android:background="@color/white"
                 android:max="255"
                 android:maxHeight="1000dp" />
         </LinearLayout>
@@ -222,7 +222,7 @@
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="fill_parent"
-                android:background="@color/green"
+                android:background="@color/white"
                 android:gravity="center"
                 android:text="Green"
                 android:textColor="@android:color/black"
@@ -232,7 +232,7 @@
                 android:id="@+id/edGreen"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:background="@color/green"
+                android:background="@color/white"
                 android:ems="3"
                 android:gravity="center"
                 android:inputType="number"
@@ -251,7 +251,7 @@
                 android:progressTint="@color/green_slider"
                 android:thumbTint="@color/green_slider"
                 android:progressBackgroundTint="@android:color/darker_gray"
-                android:background="@color/green"
+                android:background="@color/white"
                 android:max="255"
                 android:maxHeight="1000dp" />
 
@@ -267,7 +267,7 @@
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="fill_parent"
-                android:background="@color/bluee"
+                android:background="@color/white"
                 android:gravity="center"
                 android:text="Blue"
                 android:textColor="@android:color/black"
@@ -277,7 +277,7 @@
                 android:id="@+id/edBlue"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:background="@color/bluee"
+                android:background="@color/white"
                 android:ems="3"
                 android:gravity="center"
                 android:inputType="number"
@@ -293,7 +293,7 @@
                 android:id="@+id/barBlue"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="@color/bluee"
+                android:background="@color/white"
                 android:progressTint="@color/blue_slider"
                 android:progressBackgroundTint="@android:color/darker_gray"
                 android:thumbTint="@color/blue_slider"
@@ -311,8 +311,8 @@
 
             <TextView
                 android:layout_width="80dp"
-                android:layout_height="fill_parent"
-                android:background="@android:color/white"
+                android:layout_height="match_parent"
+                android:background="@color/white"
                 android:gravity="center"
                 android:text="@string/white_br"
                 android:textColor="@android:color/black"
@@ -322,7 +322,7 @@
                 android:id="@+id/edWhite"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:background="@android:color/white"
+                android:background="@color/white"
                 android:ems="3"
                 android:gravity="center"
                 android:inputType="number"
@@ -337,7 +337,7 @@
                 android:id="@+id/barWhite"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="#ffffff"
+                android:background="@color/white"
                 android:progressTint="#222222"
                 android:thumbTint="#222222"
                 android:max="255"
@@ -353,7 +353,7 @@
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="fill_parent"
-                android:background="@color/red"
+                android:background="@color/white"
                 android:gravity="center"
                 android:text="LED 65"
                 android:textColor="@android:color/black"
@@ -363,7 +363,7 @@
                 android:id="@+id/edLED65"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:background="@color/red"
+                android:background="@color/white"
                 android:ems="3"
                 android:gravity="center"
                 android:inputType="number"
@@ -380,9 +380,9 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_gravity="fill_horizontal"
-                android:background="@color/red"
-                android:thumbTint="@color/red_slider"
-                android:progressTint="@color/red_slider"
+                android:background="@color/white"
+                android:thumbTint="@color/torso_blue_main"
+                android:progressTint="@color/light_gray"
                 android:progressTintMode="src_in"
                 android:progressBackgroundTint="@android:color/darker_gray"
                 android:max="255"
@@ -399,7 +399,7 @@
         <TextView
             android:layout_width="80dp"
             android:layout_height="fill_parent"
-            android:background="@color/green"
+            android:background="@color/white"
             android:gravity="center"
             android:text="LED UVA"
             android:textColor="@android:color/black"
@@ -409,7 +409,7 @@
             android:id="@+id/edLEDUVA"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:background="@color/green"
+            android:background="@color/white"
             android:ems="3"
             android:gravity="center"
             android:inputType="number"
@@ -425,9 +425,9 @@
             android:id="@+id/barLEDUVA"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:background="@color/green"
-            android:progressTint="@color/green_slider"
-            android:thumbTint="@color/green_slider"
+            android:background="@color/white"
+            android:progressTint="@color/light_gray"
+            android:thumbTint="@color/torso_blue_main"
             android:progressBackgroundTint="@android:color/darker_gray"
             android:max="255"
             android:maxHeight="1000dp" />
@@ -443,7 +443,7 @@
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="fill_parent"
-                android:background="@color/bluee"
+                android:background="@color/white"
                 android:gravity="center"
                 android:text="LED 50"
                 android:textColor="@android:color/black"
@@ -453,7 +453,7 @@
                 android:id="@+id/edLED50"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:background="@color/bluee"
+                android:background="@color/white"
                 android:ems="3"
                 android:gravity="center"
                 android:inputType="number"
@@ -469,10 +469,10 @@
                 android:id="@+id/barLED50"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="@color/bluee"
-                android:progressTint="@color/blue_slider"
+                android:background="@color/white"
+                android:progressTint="@color/light_gray"
                 android:progressBackgroundTint="@android:color/darker_gray"
-                android:thumbTint="@color/blue_slider"
+                android:thumbTint="@color/torso_blue_main"
                 android:max="255"
                 android:maxHeight="1000dp" />
 
@@ -498,7 +498,7 @@
                 android:id="@+id/edLED27"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:background="@android:color/white"
+                android:background="@color/white"
                 android:ems="3"
                 android:gravity="center"
                 android:inputType="number"
@@ -530,7 +530,7 @@
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="fill_parent"
-                android:background="@color/bluee"
+                android:background="@color/white"
                 android:gravity="center"
                 android:text="@string/LED_9"
                 android:textColor="@android:color/black"
@@ -540,7 +540,7 @@
                 android:id="@+id/edLED395"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:background="@color/bluee"
+                android:background="@color/white"
                 android:ems="3"
                 android:gravity="center"
                 android:inputType="number"
@@ -556,7 +556,7 @@
                 android:id="@+id/barLED395"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="@color/bluee"
+                android:background="@color/white"
                 android:progressTint="@color/blue_slider"
                 android:progressBackgroundTint="@android:color/darker_gray"
                 android:thumbTint="@color/blue_slider"
@@ -573,7 +573,7 @@
             <TextView
                 android:layout_width="80dp"
                 android:layout_height="fill_parent"
-                android:background="@android:color/white"
+                android:background="@color/white"
                 android:gravity="center"
                 android:text="LED 420"
                 android:textColor="@android:color/black"
@@ -583,7 +583,7 @@
                 android:id="@+id/edLED420"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:background="@android:color/white"
+                android:background="@color/white"
                 android:ems="3"
                 android:gravity="center"
                 android:inputType="number"
@@ -599,7 +599,7 @@
                 android:id="@+id/barLED420"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="#ffffff"
+                android:background="@color/white"
                 android:progressTint="#222222"
                 android:thumbTint="#222222"
                 android:max="255"
