--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -15,4 +15,10 @@
     <color name="bluee">#47c5ff</color>
     <color name="blue_slider">#1111aa</color>
     <color name="colorStatusText">#FFDB58</color>
+
+    <color name="torso_blue_main">#0033CC</color>
+    <color name="torso_green_main">#009933</color>
+    <color name="torso_gray_button">#C9C9C9</color>
+    <color name="torso_red_button">#871C22</color>
+    <color name="app_background">#EAEAEA</color>
 </resources>
