--- a/src/main/res/drawable/button_active_main.xml
+++ b/src/main/res/drawable/button_active_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
+    <!--<gradient
         android:startColor="#FFFFFF"
         android:centerColor="#00EE00"
         android:endColor="#006600"
-        android:angle="270" />
+        android:angle="270" />-->
 
     <stroke android:color="@color/black"
         android:width="1dp" />
@@ -21,4 +21,6 @@
         android:bottomLeftRadius="5dip"
         android:topRightRadius="5dip"
         android:topLeftRadius="5dip" />
+
+    <solid android:color="@color/torso_green_main" />
 </shape>
