--- a/src/main/res/drawable/button_idle_special.xml
+++ b/src/main/res/drawable/button_idle_special.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
+    <!--<gradient
         android:startColor="#DDB700"
         android:centerColor="#B69700"
         android:endColor="#796400"
-        android:angle="270" />
+        android:angle="270" />-->
 
     <stroke android:color="@color/white"
         android:width="1dp" />
@@ -21,4 +21,5 @@
         android:bottomLeftRadius="5dip"
         android:topRightRadius="5dip"
         android:topLeftRadius="5dip" />
+    <solid android:color="@color/torso_gray_button" />
 </shape>
