--- a/src/main/res/drawable/buttonselector_main.xml
+++ b/src/main/res/drawable/buttonselector_main.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/button_idle_main" android:state_pressed="false" android:state_selected="false"/>
-    <item android:drawable="@drawable/button_pressed" android:state_pressed="true"/>
+    <!-- <item android:drawable="@drawable/button_pressed" android:state_pressed="true"/> -->
     <item android:state_enabled="false" android:drawable="@drawable/button_idle_disabled" />
 
 </selector>
