--- a/src/main/res/layout/trs_digital_panel.xml
+++ b/src/main/res/layout/trs_digital_panel.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/white">
+        android:background="@color/app_background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,11 +22,11 @@
             android:layout_marginTop="2dp"
             >
 
-            <ImageView
+            -*<ImageView
                 android:layout_width="0dp"
                 android:layout_height="81dp"
                 android:layout_marginTop="5dp"
-                android:src="@mipmap/unity_torso_logo_fg"
+                android:src="@mipmap/unitycolor_logo_fg"
                 android:layout_weight="4"
                 android:layout_gravity="start"
                 android:scaleType="fitStart"
@@ -272,6 +272,7 @@
                     android:scaleType="fitCenter"
                     android:textSize="@dimen/button_text_size"
                     android:visibility="visible"
+                    android:textColor="@color/black"
                     />
 
 
@@ -335,7 +336,7 @@
                         android:layout_height="wrap_content"
                         android:format24Hour="H:mm:ss"
                         android:textColor="@color/black"
-                        android:background="@color/white"
+                        android:background="@color/app_background"
                         />
 
             </LinearLayout>
