--- a/src/main/res/layout/trs_maintenance_page.xml
+++ b/src/main/res/layout/trs_maintenance_page.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TRSRecertificationPage">
+    tools:context=".TRSMaintenancePage">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/app_background"
         >
 
         <TextView
@@ -363,6 +364,8 @@
                     android:text="SAVE"
                     android:textSize="@dimen/button_text_size"
                     android:onClick="saveSettings"
+                    android:background="@color/torso_blue_main"
+                    android:textColor="@color/white"
                     />
 
                 <Button
@@ -376,7 +379,7 @@
                     android:text="Factory reset"
                     android:textSize="@dimen/button_text_size"
                     android:onClick="factoryReset"
-                    android:backgroundTint="@color/red_slider"
+                    android:backgroundTint="@color/torso_red_button"
                     android:textColor="@color/white"
                     />
 
