Formatting changes - colour schemes / buttons / labels / page names - part2

--- a/src/main/res/layout/light_adjustments.xml
+++ b/src/main/res/layout/light_adjustments.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_background">
+    android:background="@color/app_background_gray">
 
    <!-- <TextView
         android:id="@+id/textViewHeaderVersion"
@@ -152,7 +152,7 @@
         android:id="@+id/rgbControls"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_light"
+
         android:columnCount="3"
         android:orientation="vertical"
         android:paddingLeft="0dp"
@@ -165,7 +165,8 @@
             android:layout_height="@dimen/color_slider_height"
             android:orientation="horizontal"
             android:layout_below="@+id/rowLED27"
-            android:id="@+id/rowRed">
+            android:id="@+id/rowRed"
+            android:layout_marginBottom="@dimen/light_setting_pg_slider_bttm_margin">
 
             <ProgressBar
                 style="?android:attr/progressBarStyleLarge"
@@ -204,10 +205,11 @@
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/color_slider_height"
                 android:layout_gravity="fill_horizontal"
-                android:thumbTint="@color/red_slider"
-                android:progressTint="@color/red_slider"
-                android:progressTintMode="src_in"
                 android:background="@color/white"
+                android:thumbTint="@color/torso_blue_main"
+                android:progressTint="@color/light_adjustments_pg_progress_slider_bg_tint_active"
+                android:progressTintMode="src_in"
+                android:progressBackgroundTint="@color/light_adjustments_pg_progress_slider_bg_tint_idle"
                 android:max="255"
                 android:maxHeight="1000dp" />
         </LinearLayout>
@@ -217,7 +219,8 @@
             android:layout_height="@dimen/color_slider_height"
             android:orientation="horizontal"
             android:layout_below="@+id/rowRed"
-            android:id="@+id/rowGreen">
+            android:id="@+id/rowGreen"
+            android:layout_marginBottom="@dimen/light_setting_pg_slider_bttm_margin">
 
             <TextView
                 android:layout_width="80dp"
@@ -248,10 +251,11 @@
                 android:id="@+id/barGreen"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:progressTint="@color/green_slider"
-                android:thumbTint="@color/green_slider"
-                android:progressBackgroundTint="@android:color/darker_gray"
                 android:background="@color/white"
+                android:thumbTint="@color/torso_blue_main"
+                android:progressTint="@color/light_adjustments_pg_progress_slider_bg_tint_active"
+                android:progressTintMode="src_in"
+                android:progressBackgroundTint="@color/light_adjustments_pg_progress_slider_bg_tint_idle"
                 android:max="255"
                 android:maxHeight="1000dp" />
 
@@ -262,7 +266,8 @@
             android:layout_height="@dimen/color_slider_height"
             android:orientation="horizontal"
             android:layout_below="@+id/rowGreen"
-            android:id="@+id/rowBlue">
+            android:id="@+id/rowBlue"
+            android:layout_marginBottom="@dimen/light_setting_pg_slider_bttm_margin">
 
             <TextView
                 android:layout_width="80dp"
@@ -294,9 +299,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="@color/white"
-                android:progressTint="@color/blue_slider"
-                android:progressBackgroundTint="@android:color/darker_gray"
-                android:thumbTint="@color/blue_slider"
+                android:thumbTint="@color/torso_blue_main"
+                android:progressTint="@color/light_adjustments_pg_progress_slider_bg_tint_active"
+                android:progressTintMode="src_in"
+                android:progressBackgroundTint="@color/light_adjustments_pg_progress_slider_bg_tint_idle"
                 android:max="255"
                 android:maxHeight="1000dp" />
 
@@ -307,7 +313,8 @@
             android:layout_height="@dimen/color_slider_height"
             android:orientation="horizontal"
             android:layout_below="@+id/rowBlue"
-            android:id="@+id/rowWhite">
+            android:id="@+id/rowWhite"
+            android:layout_marginBottom="@dimen/light_setting_pg_slider_bttm_margin">
 
             <TextView
                 android:layout_width="80dp"
@@ -338,8 +345,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="@color/white"
-                android:progressTint="#222222"
-                android:thumbTint="#222222"
+                android:thumbTint="@color/torso_blue_main"
+                android:progressTint="@color/light_adjustments_pg_progress_slider_bg_tint_active"
+                android:progressTintMode="src_in"
+                android:progressBackgroundTint="@color/light_adjustments_pg_progress_slider_bg_tint_idle"
                 android:max="255"
                 android:maxHeight="1000dp" />
         </LinearLayout>
@@ -348,7 +357,8 @@
             android:id="@+id/rowLED65"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="@dimen/light_setting_pg_slider_bttm_margin">
 
             <TextView
                 android:layout_width="80dp"
@@ -382,9 +392,9 @@
                 android:layout_gravity="fill_horizontal"
                 android:background="@color/white"
                 android:thumbTint="@color/torso_blue_main"
-                android:progressTint="@color/light_gray"
+                android:progressTint="@color/light_adjustments_pg_progress_slider_bg_tint_active"
                 android:progressTintMode="src_in"
-                android:progressBackgroundTint="@android:color/darker_gray"
+                android:progressBackgroundTint="@color/light_adjustments_pg_progress_slider_bg_tint_idle"
                 android:max="255"
                 android:maxHeight="1000dp" />
         </LinearLayout>
@@ -394,7 +404,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/color_slider_height"
             android:layout_below="@+id/rowLED65"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="@dimen/light_setting_pg_slider_bttm_margin">
 
         <TextView
             android:layout_width="80dp"
@@ -426,9 +437,10 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@color/white"
-            android:progressTint="@color/light_gray"
             android:thumbTint="@color/torso_blue_main"
-            android:progressBackgroundTint="@android:color/darker_gray"
+            android:progressTint="@color/light_adjustments_pg_progress_slider_bg_tint_active"
+            android:progressTintMode="src_in"
+            android:progressBackgroundTint="@color/light_adjustments_pg_progress_slider_bg_tint_idle"
             android:max="255"
             android:maxHeight="1000dp" />
         </LinearLayout>
@@ -438,7 +450,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/color_slider_height"
             android:layout_below="@+id/rowLEDUVA"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="@dimen/light_setting_pg_slider_bttm_margin">
 
             <TextView
                 android:layout_width="80dp"
@@ -470,9 +483,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="@color/white"
-                android:progressTint="@color/light_gray"
-                android:progressBackgroundTint="@android:color/darker_gray"
                 android:thumbTint="@color/torso_blue_main"
+                android:progressTint="@color/light_adjustments_pg_progress_slider_bg_tint_active"
+                android:progressTintMode="src_in"
+                android:progressBackgroundTint="@color/light_adjustments_pg_progress_slider_bg_tint_idle"
                 android:max="255"
                 android:maxHeight="1000dp" />
 
@@ -483,7 +497,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/color_slider_height"
             android:layout_below="@+id/rowLED50"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="@dimen/light_setting_pg_slider_bttm_margin" >
 
             <TextView
                 android:layout_width="80dp"
@@ -513,9 +528,11 @@
                 android:id="@+id/barLED27"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:background="#ffffff"
-                android:progressTint="#222222"
-                android:thumbTint="#222222"
+                android:background="@color/white"
+                android:thumbTint="@color/torso_blue_main"
+                android:progressTint="@color/light_adjustments_pg_progress_slider_bg_tint_active"
+                android:progressTintMode="src_in"
+                android:progressBackgroundTint="@color/light_adjustments_pg_progress_slider_bg_tint_idle"
                 android:max="255"
                 android:maxHeight="1000dp" />
         </LinearLayout>
@@ -525,7 +542,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/color_slider_height"
             android:layout_below="@+id/rowWhite"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="@dimen/light_setting_pg_slider_bttm_margin">
 
             <TextView
                 android:layout_width="80dp"
@@ -557,9 +575,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="@color/white"
-                android:progressTint="@color/blue_slider"
-                android:progressBackgroundTint="@android:color/darker_gray"
-                android:thumbTint="@color/blue_slider"
+                android:thumbTint="@color/torso_blue_main"
+                android:progressTint="@color/light_adjustments_pg_progress_slider_bg_tint_active"
+                android:progressTintMode="src_in"
+                android:progressBackgroundTint="@color/light_adjustments_pg_progress_slider_bg_tint_idle"
                 android:max="255"
                 android:maxHeight="1000dp" />
         </LinearLayout>
@@ -568,7 +587,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/color_slider_height"
             android:layout_below="@+id/rowLED395"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="@dimen/light_setting_pg_slider_bttm_margin">
 
             <TextView
                 android:layout_width="80dp"
@@ -600,8 +620,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="@color/white"
-                android:progressTint="#222222"
-                android:thumbTint="#222222"
+                android:thumbTint="@color/torso_blue_main"
+                android:progressTint="@color/light_adjustments_pg_progress_slider_bg_tint_active"
+                android:progressTintMode="src_in"
+                android:progressBackgroundTint="@color/light_adjustments_pg_progress_slider_bg_tint_idle"
                 android:max="255"
                 android:maxHeight="1000dp" />
 
