--- a/src/main/res/layout/trs_digital_panel.xml
+++ b/src/main/res/layout/trs_digital_panel.xml
@@ -22,7 +22,8 @@
             android:layout_marginTop="2dp"
             >
 
-            -*<ImageView
+            <ImageView
+                android:id="@+id/unitycolor_logo"
                 android:layout_width="0dp"
                 android:layout_height="81dp"
                 android:layout_marginTop="5dp"
@@ -410,7 +411,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="10sp"
-                    android:text="Torso-Verlag e.K. Obere Grussen 8\nDE-97877 Wertheim Tel. +49(0)93242 933970"
+                    android:text="@string/torso_footer_address"
 
                     />
 
