--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -20,5 +20,9 @@
     <color name="torso_green_main">#009933</color>
     <color name="torso_gray_button">#C9C9C9</color>
     <color name="torso_red_button">#871C22</color>
-    <color name="app_background">#EAEAEA</color>
+    <color name="app_background">#FFFFFF</color>
+    <color name="app_background_gray">#EAEAEA</color>
+    <color name="light_adjustments_pg_progress_slider_bg_tint_idle">#E3E3E3</color>
+    <color name="light_adjustments_pg_progress_slider_bg_tint_active">#195B98</color>
+
 </resources>
