--- a/src/main/res/layout/trs_settings.xml
+++ b/src/main/res/layout/trs_settings.xml
@@ -326,7 +326,7 @@
                 android:layout_gravity="right|end"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="20dp"
                 android:baselineAligned="false"
 
                 >
@@ -363,7 +363,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="10sp"
-                    android:text="Torso-Verlag e.K. Obere Grussen 8\nDE-97877 Wertheim Tel. +49(0)93242 933970"
+                    android:text="@string/torso_footer_address"
 
                     />
 
