--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -28,6 +28,9 @@
     <dimen name="settings_pg_label_width">0.46</dimen>
     <dimen name="settings_pg_value_width">0.38</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="button_width_narrow">100dp</dimen>
+
+    <dimen name="light_setting_pg_slider_bttm_margin">8dp</dimen>
 
 
 </resources>
