--- a/src/main/res/layout/trs_settings.xml
+++ b/src/main/res/layout/trs_settings.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/app_background"
+        android:textColor="@color/black"
         >
 
         <TextView
@@ -46,7 +47,8 @@
                     android:layout_weight="@dimen/settings_pg_label_width"
                     android:gravity="right|center_vertical"
                     android:text="Blower on"
-                    android:textSize="@dimen/button_text_size" />
+                    android:textSize="@dimen/button_text_size"
+                    android:textColor="@color/black"/>
 
                 <EditText
                     android:layout_width="0dp"
@@ -58,6 +60,7 @@
                     android:layout_weight="@dimen/settings_pg_value_width"
                     android:maxLines="1"
                     android:singleLine="true"
+                    android:textColor="@color/black"
                     />
 
                 <TextView
