Bluetooth connection functionality moved to Digital Page

--- a/src/main/res/layout/trs_digital_panel.xml
+++ b/src/main/res/layout/trs_digital_panel.xml
@@ -59,6 +59,7 @@
                 android:layout_gravity="center"
                 android:foregroundGravity="center"
                 android:src="@drawable/usb_connection_levels"
+                android:visibility="gone"
                 />
 
             <ImageView
