--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -22,6 +22,7 @@
     <dimen name="digital_panel_button_height">50dp</dimen>
     <dimen name="button_margin">10dp</dimen>
     <dimen name="button_margin_10dp">10dp</dimen>
+    <dimen name="button_margin_3dp">3dp</dimen>
 
     <dimen name="main_screen_sidemargin">20dp</dimen>
     <dimen name="recertification_label_width">180dp</dimen>
