--- a/src/main/res/layout/trs_settings.xml
+++ b/src/main/res/layout/trs_settings.xml
@@ -27,7 +27,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
 
             <LinearLayout
                 android:id="@+id/lLayout1"
@@ -361,6 +362,7 @@
                 android:layout_marginBottom="5dp"
                 android:baselineAligned="true"
                 android:layout_alignParentBottom="true"
+
                 >
 
                 <TextView
@@ -368,7 +370,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="10sp"
                     android:text="@string/torso_footer_address"
-
+                    android:visibility="gone"
                     />
 
 
